<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            style="@style/card_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8dp"
                    android:text="@string/question_1" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_8dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/question_1_logo"
                    android:src="@drawable/corvette" />

                <RadioGroup
                    android:id="@+id/question_1_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_8dp">

                    <RadioButton
                        android:id="@+id/question_1_option_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cadillac" />

                    <RadioButton
                        android:id="@+id/question_1_option_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/corvette" />

                    <RadioButton
                        android:id="@+id/question_1_option_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/citroen" />

                    <RadioButton
                        android:id="@+id/question_1_option_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chrysler" />

                </RadioGroup>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/card_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8dp"
                    android:text="@string/question_2" />

                <EditText
                    android:id="@+id/question_2_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_8dp"
                    android:hint="@string/answer"
                    android:inputType="text" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/card_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8dp"
                    android:text="@string/question_3" />

                <CheckBox
                    android:id="@+id/question_3_option_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/convergence"
                    android:text="@string/ferarri" />

                <CheckBox
                    android:id="@+id/question_3_option_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ford_mustang" />

                <CheckBox
                    android:id="@+id/question_3_option_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lamborghini" />

                <CheckBox
                    android:id="@+id/question_3_option_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_8dp"
                    android:text="@string/porsche" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/card_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8dp"
                    android:text="@string/question_4" />

                <CheckBox
                    android:id="@+id/question_4_option_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bugatti_veyron_grand_sport" />

                <CheckBox
                    android:id="@+id/question_4_option_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bugatti_chiron" />

                <CheckBox
                    android:id="@+id/question_4_option_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hennessey_venom_f5" />

                <CheckBox
                    android:id="@+id/question_4_option_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_8dp"
                    android:text="@string/koenigsegg_agera_rs" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_8dp"
            android:text="@string/submit" />

    </LinearLayout>
</ScrollView>